--- a/emacs/org/task.org
+++ b/emacs/org/task.org
@@ -1,7 +1,7 @@
 * 2012
 ** July
 *** 01
-**** [WEEKEND]
+**** WEEKEND
 *** 02
 **** OCM 
 ***** 1 hour billable to OCM.  Created 'audit log' based on ApplicationLog from EMS (and functions from EPSCOR).
@@ -29,3 +29,8 @@
 **** OCM
 ***** 3 hours non-billable to OCM.  Changed 'members' fields on resolution tab.  Fixed download.  Removed 'hearing to determine' field.  Printing case number and due date on 'student snapshot'
 ***** 3 hours bilalble to OCM.  Created message areas on dashboads (conduct, arrest, academic).  Imported data from table tcc_tblIncidents to improve lookup of student records.  Import most of the OCM volunteers (most volunteers don't have PIDMs). Switched Res path radioboxes to checkboxes. 
+*** 11
+**** OCM
+**** 3 hours billable to OCM.  Added support for "organization" as the respondent for an complaint form.
+**** 1 hours billable to OCM.  Added support for highlighting of dates customizable by OCM.
+**** 2 hours non-billable ot OCM. Misc. bug fixes.
