--- a/emacs/org/task.org
+++ b/emacs/org/task.org
@@ -77,13 +77,17 @@
 **** WEEKEND
 *** 22
 **** WEEKEND
-*** 22
+*** 23
 **** RCI
-***** 1 hour non-billable to RCI.  Finished task-output.py to include billable/non-bibllable total and option hanlding.
+***** 3 hour non-billable to RCI.  Finished task-output.py to include billable/non-bibllable total and option hanlding.
 **** OCM
-***** 1.5 hours billable to OCM.  Updated MySanctions report to allow complainant to set completed date.
+***** 1.5 hour billable to OCM.  Updated MySanctions report to allow complainant to set completed date.
+***** .5 hour billable to OCM.  Updated Arrest Form for required/optional fields.
+***** .5 hour billable to OCM.  Updated Open Sanction Reports to ignore complaints with withdrawn sanctions.
+***** .5 hour non-billable to OCM.  Updated validate_privilege() to allow specifing AND/OR privilege requirement.
 *** 24
 **** OCM
-***** 1.5 hour non-billable to OCM. Corrected page loading errors.  Updated OCM Privileges document (will send to Blaise tomorrow.)
+***** .5 hour non-billable to OCM.  Complted changes to validate_privilege().
+***** 2 hour non-billable to OCM.  Corrected page loading errors.  Updated OCM Privileges document (will send to Blaise tomorrow.)
 **** FR (TODO: Comfirm this with Bob.)
 ***** 2.5 hours billable to FR.  Updated PDF files from ODT templates for printable output.
