--- a/emacs/org/task.org
+++ b/emacs/org/task.org
@@ -1,6 +1,7 @@
 # OCM: 58797
 # EMS: 50988
 # ePIP: 59333
+# Obliterase: XXXXX
 * 2012
 ** July
 *** 01
@@ -237,8 +238,28 @@ d on business rules from OCM.
 ***** 6 hours billable.  Continue work on functionality testing.  Wrote script which tranforms Medicaid data from test plan to selenium test cases.
 *** 11
 **** ePIP
-***** 4 hours billable.  Continue work on functionality testing.  Wrote script which tranforms Needy data from test plan to selenium test cases.
+***** 4 hours billable.  Continued work on functionality testing.  Wrote script which tranforms Needy data from test plan to selenium test cases.
 **** UACC
 ***** 1 hour non-billable.  Helped Allan resolve issue with LDAP access from UACC site on housing1.unh.eud.
 **** OCM
 ***** 1 hour billable.  Added new feature to OCM allowing Sarah to set a custom cell phone number for her volunteers.
+*** 12
+**** Obliterate 
+***** 1 hour non-billable.  Meeting with Tucker, Stephen Wood and myself to discuss work for Stephen's company Obliterase.
+***** 1 hours billable.  Updated logo and lCreated favicon.ico.  Updated webserver to use management-console.obliterase.com.
+**** ePIP
+***** 4 hours billable.  Continued work on functionality testing.
+*** 13
+**** Obliterate 
+**** 2 hours billable.  Updated webserver to use cloud-console.obliterase.com.  Most of the changed requested by Steve Wood have been complted (email sent 09/13/2012 02:39 PM).
+***** 4 hours billable.  Continued work on functionality testing.
+
+*** 14
+**** Obliterate 
+***** 3 hours billable.  Created footer.  Began work on PDF generation.  Made changes to Device Logs recordset.
+***** 3 hours billable.  Continued work on functionality testing.
+
+*** 15
+**** WEEKEND
+*** 16
+**** WEEKEND
